<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:backgroundTint="@android:color/black"
        android:hint="@string/enterEmail"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorGray"
        android:textSize="16dp"
        android:gravity="center"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:backgroundTint="@android:color/black"
        android:hint="@string/createPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorGray"
        android:textSize="16dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:backgroundTint="@android:color/black"
        android:hint="@string/confirmPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorGray"
        android:textSize="16dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>